--- a/pages/index.html
+++ b/pages/index.html
@@ -12,98 +12,53 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
   <body>
-    <nav class="nav flex-column bg-light">
-        <a href="#"><img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/053bcf3afe88348b79971d2ea8de28f179cba5c5/week5/logo-ANSWER.svg" alt="LOGO"></a>
-        <a class="nav-link link-success" href="#">
-            <span class="material-icons">
-            assessment
-          </span>Dashboard
-        </a>
-        <a class="nav-link link-success" href="#">
-            <span class="material-icons">
-                question_answer
-                </span>Question
-        </a>
-        <a class="nav-link link-success" href="#">
-            <span class="material-icons">
-            assignment
-            </span>Assignment
-        </a>
-        <a class="nav-link link-success" href="#">
-            <span class="material-icons">
-                video_library
-                </span>Course
+    <nav class="nav flex-column bg-light justify-content-between">
+        <div class="up">
+            <a class="p-32 d-block" href="#">
+                <img src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/053bcf3afe88348b79971d2ea8de28f179cba5c5/week5/logo-ANSWER.svg" alt="LOGO"></a>
+            <a class="nav-link link-dark d-flex" href="#">
+                <span class="material-icons pe-3">
+                assessment
+              </span>Dashboard
             </a>
-        <a class="nav-link link-success active" aria-current="page" href="#"> 
-            <span class="material-icons">
-                people
-            </span>
-          Admin
-        </a>
-        <a class="nav-link link-success" href="#">
-            <span class="material-icons">
-                settings
-              </span>Settings</a>
-      </nav>
-      <main class="main">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 col-md-4">
-              <div class="list-group" id="list-tab" role="tablist">
-                <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">
-                  Home
+            <a class="nav-link link-dark d-flex" href="#">
+                <span class="material-icons pe-3">
+                    question_answer
+                    </span>Question
+            </a>
+            <a class="nav-link link-dark d-flex" href="#">
+                <span class="material-icons pe-3">
+                assignment
+                </span>Assignment
+            </a>
+            <a class="nav-link link-dark d-flex" href="#">
+                <span class="material-icons pe-3">
+                    video_library
+                    </span>Course
                 </a>
-                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Profile</a>
-                <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Messages</a>
-                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>
-              </div>
-            </div>
-            <div class="col-12 col-md-8">
-              <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-                  <div class="card mb-3">
-                    <div class="card-header">
-                      Featured
-                    </div>
-                    <div class="card-body">
-                      <div class="d-flex">
-                        <div class="flex-shrink-0">
-                          <img src="..." alt="...">
-                        </div>
-                        <div class="flex-grow-1 ms-3">
-                          This is <code class="text-success bg-light px-1 rounded-1 font-mono">div</code> content from a media component. You can replace this with any content and adjust it as needed.
-                          <a href="#" class="btn btn-light border" download="HW-2-David.zip">HW-2-David.zip</a>
-                        </div>
-                      </div>
-                      <div id="editor" class="editor">This is some sample content.</div>
-                    </div>
-                  </div>
-                </div>
-                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...2</div>
-                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...3</div>
-                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...4</div>
-              </div>
-              <div class="d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-success me-3">Mark as read</button>
-                <button type="button" class="btn btn-success">Reply</button>
-              </div>
-              <!-- Collapse 範例 -->
-              <button class="btn link-success" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                <span class="material-icons expand_less">
-                  expand_less
+            <a class="nav-link link-success active d-flex" aria-current="page" href="#"> 
+                <span class="material-icons pe-3">
+                    people
                 </span>
-                <span class="material-icons expand_more">
-                  expand_more
-                </span>
-              </button>
-              <div class="collapse" id="collapseExample">
-                <button type="button" class="btn btn-outline-danger me-3">deactivate</button>
-                <button type="button" class="btn btn-success">edit</button>
-              </div>
-            </div>
-          </div>
+              Admin
+            </a>
+            <a class="nav-link link-dark d-flex" href="#">
+                <span class="material-icons pe-3">
+                    settings
+                  </span>Settings</a>
         </div>
-      </main>
+        <div class="down">
+            <div class="user p-32 d-flex flex-row align-items-center">
+                <img class="w-40 border-radius-100 me-3" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week5/andychen.jpeg?raw=true" alt="user" >
+                <div class="user_name">
+                    <p class="text-dark fz-16 pb-1 m-0">Andy Chen</p>
+                    <p class="text-secondary fz-14 m-0">andy0401@mail.com</p>
+                </div>
+            </div>
+        </div>
+      </nav>
+      
+      
 
 
     <!-- 不能改 Vite 核心關鍵 注入JS -->
